<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Baca.Edit_Data">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_marginRight="25dp">

            <EditText
                android:id="@+id/et_Nama"
                android:layout_width="338dp"
                android:layout_height="55dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:hint="@string/namao"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginRight="25dp">

            <EditText
                android:id="@+id/et_Harga"
                android:layout_width="248dp"
                android:layout_height="55dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hargao"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_Stok"
                android:layout_width="83dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/stoko"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_marginRight="25dp">

            <EditText
                android:id="@+id/et_Zat"
                android:layout_width="338dp"
                android:layout_height="55dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:hint="@string/zato"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_marginRight="25dp">

            <EditText
                android:id="@+id/et_Khasiat"
                android:layout_width="338dp"
                android:layout_height="55dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:hint="@string/khasiato"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_Ubah"
                android:layout_width="339dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/ubah"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_Hapus"
                android:layout_width="339dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/hapus"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>