<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pengaturan.Main_Settings"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/bt_Akun"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pakun"
        android:textSize="17dp"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pakunn"
        android:layout_marginLeft="20dp"
        android:textSize="17dp"/>
    <View
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/darker_gray"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/bt_Apotik"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/papotik"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/papotikk"
            android:layout_marginLeft="20dp"
            android:textSize="17dp"/>
        <View
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>
</LinearLayout>