<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Pengaturan.Apotik_Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ubaha"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <View
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/namaa"
                    />
                <EditText
                    android:id="@+id/txt_NamaApotik"
                    android:inputType="textPersonName"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="#000000"
                    android:background="@color/transparent"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/alamata"
                    />
                <EditText
                    android:id="@+id/txt_AlamatApotik"
                    android:inputType="textPersonName"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="#000000"
                    android:background="@color/transparent"
                    />
                <Button
                    android:id="@+id/bt_UbahApotik"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:text="@string/ubaha"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>